--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ p {
     background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)), url("./images/red-table.jpg");
 
     border-radius: 20px;
-    border: 2px solid #FE1111;
+    border: 2px solid white;
 }
 
 #player-info {
@@ -88,7 +88,6 @@ p {
     text-shadow: 0px 0px 1px white;
     font-weight: bolder;
     font-family: Arial, Helvetica, sans-serif;
-    color:
 }
 
 #bet-input-el {
@@ -99,7 +98,7 @@ p {
     font-family: inherit;
     font-weight: bolder;
     border-radius: 5px;
-    border: 1px solid #016f32;
+    border: 3px solid #016f32;
     color: #016f32;
     background-color: #d49819;
 }
